# BattleGround

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  format.diff
.github/workflows/: blank.yml
project/: CMakeLists.txt  main.cpp  qml.qrc  worldfactory.cpp  worldfactory.h
project/qml/: GraphicContext.qml  MainWindow.qml  ObjectBall.qml  ObjectBox.qml  ObjectCreation.js  ObjectWall.qml
project/source/: application.cpp  application.h  ball.cpp  ball.h  basicunit.cpp  basicunit.h  box.cpp  box.h  environmentfactory.cpp  environmentfactory.h  unitcontainer.cpp  unitcontainer.h  unitfactory.cpp  unitfactory.h  wall.cpp  wall.h  world.cpp  world.h
project/source/keyboard/: keyboardevents.cpp  keyboardevents.h
project/source/map/: gravity.cpp  gravity.h  mapfactory.cpp  mapfactory.h  worldmap.cpp  worldmap.h
project/source/screen/: screenviewer.cpp  screenviewer.h
source/: CMakeLists.txt  main.cpp
source/engine/: hitbox.cpp  hitbox.h  object.cpp  object.h  objectsize.cpp  objectsize.h
source/engine/math/: vector2d.cpp  vector2d.h
source/engine/unit/: action.cpp  action.h  ground.cpp  ground.h  types.h  unit.cpp  unit.h
source/engine/unit/actions/: gethit.cpp  gethit.h  idle.cpp  idle.h  walk.cpp  walk.h
source/engine/unit/monster/: minotaur.cpp  minotaur.h  troll.cpp  troll.h
test/: CMakeLists.txt  example.cpp  main.cpp
test/engine/: hitboxTest.cpp
test/engine/math/: vector2d.cpp  vector2dTest.cpp
test/engine/unit/monster/: minotaurTest.cpp  trollTest.cpp
